# itsliquid

./: Cargo.toml  README.md  TEST_STATUS.md  debug_test.rs  deploy-web-bust-cache.sh  deploy-web.sh  simple_test.rs  test-web.sh  test_simple.rs  test_working.rs
.github/workflows/: ci.yml
benches/: cpu_performance.rs
src/: analysis.rs  desktop.rs  desktop_gpu.rs  desktop_interactive.rs  export.rs  fluid.rs  fluid_basic.rs  fluid_better.rs  fluid_dynamic.rs  fluid_final.rs  fluid_interactive.rs  fluid_proper.rs  fluid_simple.rs  fluid_simple_working.rs  fluid_working.rs  gpu_fluid.rs  gpu_functional.rs  gpu_minimal.rs  gpu_simple.rs  lib.rs  main.rs  render.rs
src/shaders/: fluid.wgsl
tests/: basic.rs  conservation_diagnostic.rs  conservation_test.rs  gpu_functional_test.rs  gpu_test.rs  simulation_tests.rs  visual_comparison_test.rs
web/: .gitignore  TESTING.md  index.html  package.json  playwright.config.js
web/tests/: share-url.spec.js  wasm-simulation.spec.js
