[package]
name = "itsliquid"
version = "0.1.0"
edition = "2024"
description = "Interactive fluid simulation with real-time mouse interaction and colorful dye visualization"
authors = ["ekg"]
license = "MIT"
repository = "https://github.com/ekg/liquid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"
glam = "0.27"
image = "0.25"
rayon = "1.10"
rand = "0.8"
bytemuck = "1.0"

[features]
default = ["cpu"]
cpu = []
gpu = ["wgpu"]

[dependencies.wgpu]
version = "0.20"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }

[profile.release]
lto = true
